[gd_scene load_steps=31 format=3 uid="uid://duxuwu5cpo1j5"]

[ext_resource type="Script" path="res://Title.gd" id="1_j7lf2"]
[ext_resource type="Texture2D" uid="uid://dma8j6r26wtk6" path="res://assets/titleBack.png" id="2_uduyd"]
[ext_resource type="Texture2D" uid="uid://qgkvbwm56p6h" path="res://assets/Title.png" id="3_4kqn1"]
[ext_resource type="Texture2D" uid="uid://djmriub0rdsbr" path="res://assets/playButtonIdle.png" id="4_2os3f"]
[ext_resource type="Texture2D" uid="uid://cvoujbte0xxrf" path="res://assets/playButtonPressed.png" id="5_46quy"]
[ext_resource type="Texture2D" uid="uid://cvnajmmtpvsvb" path="res://assets/playButtonHover.png" id="6_pl5n5"]
[ext_resource type="BitMap" uid="uid://dmn146kwc76rg" path="res://assets/playButtonClickMask.png" id="7_72fkq"]
[ext_resource type="Script" path="res://playButton.gd" id="8_ikh6k"]
[ext_resource type="Texture2D" uid="uid://d3egllgmfigta" path="res://assets/quitGameButtonIdle.png" id="9_m7536"]
[ext_resource type="Texture2D" uid="uid://ccj4vw3h77nss" path="res://assets/quitGameButtonPressed.png" id="10_xabh2"]
[ext_resource type="Texture2D" uid="uid://bd273n45mli72" path="res://assets/quitGameButtonHover.png" id="11_xn7m8"]
[ext_resource type="Script" path="res://quitButton.gd" id="12_qi4c7"]
[ext_resource type="Texture2D" uid="uid://bxy5p2defehkk" path="res://assets/SettingGameButtonIdle.png" id="13_el10r"]
[ext_resource type="Texture2D" uid="uid://c7rsj70aqyogt" path="res://assets/SettingGameButtonPressed.png" id="14_onds0"]
[ext_resource type="Texture2D" uid="uid://crrhcqn8mycrw" path="res://assets/SettingGameButtonHover.png" id="15_sr6b7"]
[ext_resource type="BitMap" uid="uid://ce3en5rdhweo1" path="res://assets/SettingGameButtonBitmap.png" id="16_bo0sj"]
[ext_resource type="Script" path="res://settingsButton.gd" id="17_70qh8"]
[ext_resource type="Texture2D" uid="uid://bm7wash7avmc8" path="res://assets/newGameButtonIdle.png" id="18_dlfbg"]
[ext_resource type="Texture2D" uid="uid://dxhsrqvhf4hkm" path="res://assets/newGameButtonPressed.png" id="19_lede2"]
[ext_resource type="Texture2D" uid="uid://b0wva734egehd" path="res://assets/newGameButtonHover.png" id="20_6ero4"]
[ext_resource type="Script" path="res://newGameButton.gd" id="21_rwtus"]
[ext_resource type="Texture2D" uid="uid://cvxe5fo5dv7t6" path="res://assets/loadGameButtonIdle.png" id="22_pb17n"]
[ext_resource type="Texture2D" uid="uid://castuc3qvauta" path="res://assets/loadGameButtonPressed.png" id="23_etgny"]
[ext_resource type="Texture2D" uid="uid://bisp2biwn5nmq" path="res://assets/loadGameButtonHover.png" id="24_e1wsb"]
[ext_resource type="Script" path="res://loadGameButton.gd" id="25_h8vt7"]
[ext_resource type="Texture2D" uid="uid://dw0tiow7n8myn" path="res://assets/returnButtonIdle.png" id="26_dhp5o"]
[ext_resource type="Texture2D" uid="uid://benymbrvicvra" path="res://assets/returnButtonPressed.png" id="27_qewka"]
[ext_resource type="Texture2D" uid="uid://bf3b51c5tsjv2" path="res://assets/returnButtonHover.png" id="28_f2kmn"]
[ext_resource type="Script" path="res://returnButton.gd" id="29_p1etq"]

[sub_resource type="BitMap" id="BitMap_ti1cv"]
data = {
"data": PackedByteArray(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 0, 0, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 0, 0, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 0, 0, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 0, 0, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 0, 0, 253, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 0, 0, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 0, 128, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 0, 192, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 0, 224, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 0, 240, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 0, 248, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 0, 248, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 0, 248, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 0, 248, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 0, 248, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 0, 248, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 0, 248, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 0, 248, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 0, 248, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 0, 248, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 0, 248, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 0, 248, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 0, 248, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 0, 248, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 0, 248, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 0, 248, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 0, 248, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 0, 248, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 0, 248, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 0, 248, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 0, 248, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 0, 248, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 247, 0, 248, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 0, 248, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 0, 248, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 236, 0, 248, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 0, 0, 248, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 0, 0, 248, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 0, 0, 248, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 0, 0, 240, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0),
"size": Vector2i(232, 50)
}

[node name="Title" type="Node2D"]
script = ExtResource("1_j7lf2")

[node name="titleBackground" type="Sprite2D" parent="."]
position = Vector2(240, 136)
scale = Vector2(2, 2)
texture = ExtResource("2_uduyd")

[node name="titleText" type="Sprite2D" parent="."]
position = Vector2(50, 26)
scale = Vector2(2, 2)
texture = ExtResource("3_4kqn1")
centered = false

[node name="playButton" type="TextureButton" parent="."]
offset_left = 127.0
offset_top = 122.0
offset_right = 359.0
offset_bottom = 172.0
action_mode = 0
texture_normal = ExtResource("4_2os3f")
texture_pressed = ExtResource("5_46quy")
texture_hover = ExtResource("6_pl5n5")
texture_click_mask = ExtResource("7_72fkq")
stretch_mode = 0
script = ExtResource("8_ikh6k")

[node name="quitButton" type="TextureButton" parent="."]
offset_left = 68.0
offset_top = 166.0
offset_right = 368.0
offset_bottom = 216.0
texture_normal = ExtResource("9_m7536")
texture_pressed = ExtResource("10_xabh2")
texture_hover = ExtResource("11_xn7m8")
texture_click_mask = SubResource("BitMap_ti1cv")
stretch_mode = 0
script = ExtResource("12_qi4c7")

[node name="settingsButton" type="TextureButton" parent="."]
offset_left = 16.0
offset_top = 121.0
offset_right = 316.0
offset_bottom = 171.0
texture_normal = ExtResource("13_el10r")
texture_pressed = ExtResource("14_onds0")
texture_hover = ExtResource("15_sr6b7")
texture_click_mask = ExtResource("16_bo0sj")
stretch_mode = 0
script = ExtResource("17_70qh8")

[node name="newGameButton" type="TextureButton" parent="."]
offset_left = 67.0
offset_top = 166.0
offset_right = 367.0
offset_bottom = 216.0
texture_normal = ExtResource("18_dlfbg")
texture_pressed = ExtResource("19_lede2")
texture_hover = ExtResource("20_6ero4")
texture_click_mask = SubResource("BitMap_ti1cv")
stretch_mode = 0
script = ExtResource("21_rwtus")

[node name="loadGameButton" type="TextureButton" parent="."]
offset_left = 67.0
offset_top = 121.0
offset_right = 367.0
offset_bottom = 171.0
texture_normal = ExtResource("22_pb17n")
texture_pressed = ExtResource("23_etgny")
texture_hover = ExtResource("24_e1wsb")
texture_click_mask = SubResource("BitMap_ti1cv")
stretch_mode = 0
script = ExtResource("25_h8vt7")

[node name="returnButton" type="TextureButton" parent="."]
offset_left = 66.0
offset_top = 209.0
offset_right = 366.0
offset_bottom = 259.0
texture_normal = ExtResource("26_dhp5o")
texture_pressed = ExtResource("27_qewka")
texture_hover = ExtResource("28_f2kmn")
texture_click_mask = SubResource("BitMap_ti1cv")
stretch_mode = 0
script = ExtResource("29_p1etq")

[node name="Settings" type="PopupMenu" parent="."]

[connection signal="button_up" from="playButton" to="playButton" method="_on_button_up"]
[connection signal="button_up" from="quitButton" to="quitButton" method="_on_button_up"]
[connection signal="button_up" from="settingsButton" to="settingsButton" method="_on_button_up"]
[connection signal="button_up" from="newGameButton" to="." method="_on_new_game_button_button_up"]
[connection signal="button_up" from="loadGameButton" to="." method="_on_load_game_button_button_up"]
[connection signal="button_up" from="returnButton" to="returnButton" method="_on_button_up"]
